--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
+
 <body>
     <header>
         <img src="https://placehold.it/200x70/ddd" alt=""></limg>
@@ -19,34 +21,47 @@
         </nav>
     </header>
     <main>
-<section id="num1">
+        <section id="num1">
 
-    <img src="https://placehold.it/960x450/ddd" alt="">
+            <img src="https://placehold.it/960x450/ddd" alt="">
 
-</section>
-<section id="num2">
-    <img src=" https://placehold.it/300x375/ddd" alt="">
-    <img src=" https://placehold.it/300x375/ddd" alt="">
-    <img src=" https://placehold.it/300x375/ddd" alt="">
+        </section>
+        <section id="num2">
+            <img src=" https://placehold.it/300x375/ddd" alt="">
+            <img src=" https://placehold.it/300x375/ddd" alt="">
+            <img src=" https://placehold.it/300x375/ddd" alt="">
 
 
-</section>
-<section id="num3">
-    <img src="https://placehold.it/480x400/ddd " alt="">
-    <div>
-        <h2>Featuer Section Heading</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla quam corporis dolorem alias veniam ea sapiente tempora consectetur nesciunt necessitatibus? Voluptate voluptas eius quos corporis deleniti laboriosam ipsam adipisci cumque!
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus voluptatibus quas fugit optio. Fugiat odio tenetur molestias, excepturi vero amet nobis a ea assumenda placeat veritatis, ad soluta reiciendis? Voluptatibus.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit omnis quos doloremque nulla autem eaque voluptates fuga mollitia recusandae magnam, cumque eveniet est nam rem error delectus qui harum quod.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, natus labore nostrum incidunt temporibus iusto vel ut. Molestiae error libero quos asperiores deleniti rem nam cumque corporis? Autem, fugit quam.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor dicta ad exercitationem adipisci facere quam, doloribus sint qui obcaecati porro. Aperiam, ratione exercitationem optio velit pariatur veritatis eveniet numquam in?
-    </p>
-    <button>Call To Action</button></div>
+        </section>
+        <section id="num3">
+                <img src="https://placehold.it/480x400/ddd " alt="">
+            
+            <div class="pos">
+                <h2>Featuer Section Heading</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla quam corporis dolorem alias veniam ea
+                    sapiente tempora consectetur nesciunt necessitatibus? Voluptate voluptas eius quos corporis deleniti
+                    laboriosam ipsam adipisci cumque!
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus voluptatibus quas fugit
+                    optio. Fugiat odio tenetur molestias, excepturi vero amet nobis a ea assumenda placeat veritatis, ad
+                    soluta reiciendis? Voluptatibus.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit omnis quos doloremque nulla autem
+                    eaque voluptates fuga mollitia recusandae magnam, cumque eveniet est nam rem error delectus qui
+                    harum quod.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, natus labore nostrum incidunt
+                    temporibus iusto vel ut. Molestiae error libero quos asperiores deleniti rem nam cumque corporis?
+                    Autem, fugit quam.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor dicta ad exercitationem adipisci
+                    facere quam, doloribus sint qui obcaecati porro. Aperiam, ratione exercitationem optio velit
+                    pariatur veritatis eveniet numquam in?
+                </p>
+                <button>Call To Action</button>
+            </div>
 
-</section>
+        </section>
 
     </main>
-<footer></footer>
-<script src="app.js"></script>
+    <footer></footer>
+    <script src="app.js"></script>
 </body>
+
 </html>
